Update Hypothesis Testings on IBM Human Resources Data.ipynb

--- a/Hypothesis Testings on IBM Human Resources Data.ipynb
+++ b/Hypothesis Testings on IBM Human Resources Data.ipynb
@@ -1858,13 +1858,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The test found the data sample was normal, failing to reject the null hypothesis at 0.05% significance level \n",
+      "The test found the data sample was not normal, rejecting the null hypothesis at 0.05% significance level \n",
       "and a confidence level of 0.95%\n"
      ]
     }
    ],
    "source": [
-    "print('The test found the data sample was normal, failing to reject the null hypothesis at {}% significance level \\nand a confidence level of {}%'.format(sig_lvl, conf_lvl))"
+    "print('The test found the data sample was not normal, rejecting the null hypothesis at {}% significance level \\nand a confidence level of {}%'.format(sig_lvl, conf_lvl))"
    ]
   }
  ],
